--- a/model_files/CMSSMCPV/FlexibleSUSY.m.in
+++ b/model_files/CMSSMCPV/FlexibleSUSY.m.in
@@ -45,9 +45,9 @@ HighScaleInput = {
    {MassG, m12}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
    {Yu, Automatic},
@@ -58,10 +58,10 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
-   {\[Mu]   , SM[MZ]},
-   {B[\[Mu]], SM[MZ]^2},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
+   {\[Mu]   , LowEnergyConstant[MZ]},
+   {B[\[Mu]], LowEnergyConstant[MZ]^2},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
