--- a/model_files/LHInputMSSM/FlexibleSUSY.m.in
+++ b/model_files/LHInputMSSM/FlexibleSUSY.m.in
@@ -45,9 +45,9 @@ HighScaleInput={
    {MassG, LHInput[MassG]}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput={
    {Yu, Automatic},
@@ -59,8 +59,8 @@ LowScaleInput={
 
 InitialGuessAtLowScale = {
    {ml2[3,3], LHInput[ml2[3,3]]},
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
