--- a/model_files/NMSSMCPV/FlexibleSUSY.m.in
+++ b/model_files/NMSSMCPV/FlexibleSUSY.m.in
@@ -58,9 +58,9 @@ HighScaleInput={
    {MassG,m12}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
    {Yu, Automatic},
@@ -71,12 +71,12 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {\[Lambda], LambdaInput},
    {\[Kappa], KappaInput},
    {vS, LambdaTimesvSInput / LambdaInput},
-   {ms2, SM[MZ]^2},
+   {ms2, LowEnergyConstant[MZ]^2},
    {eta, etaInput},
    {etaS, etaSInput},
    {Yu, Automatic},
