--- a/model_files/lowNMSSM/FlexibleSUSY.m.in
+++ b/model_files/lowNMSSM/FlexibleSUSY.m.in
@@ -73,9 +73,9 @@ SUSYScaleInput = {
     {T[Ye][3,3], ATauInput Ye[3,3]}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
     {Yu, Automatic},
@@ -86,14 +86,14 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-    {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+    {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+    {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
     {\[Lambda], LambdaInput},
     {\[Kappa], KappaInput},
     {vS, Sqrt[2] MuEffInput / LambdaInput},
-    {ms2, SM[MZ]^2},
-    {mHd2, SM[MZ]^2},
-    {mHu2, -SM[MZ]^2},
+    {ms2, LowEnergyConstant[MZ]^2},
+    {mHd2, LowEnergyConstant[MZ]^2},
+    {mHu2, -LowEnergyConstant[MZ]^2},
     {Yu, Automatic},
     {Yd, Automatic},
     {Ye, Automatic}
