--- a/model_files/munuSSM/FlexibleSUSY.m.in
+++ b/model_files/munuSSM/FlexibleSUSY.m.in
@@ -61,9 +61,9 @@ HighScaleInput = {
    {MassG, m12}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
    {Yu, Automatic},
@@ -75,9 +75,9 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
-   {vR, SM[vev]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
+   {vR, LowEnergyConstant[vev]},
    {\[Lambda], LambdaInput},
    {\[Kappa], 0.1},
    {Yu, Automatic},
