--- a/model_files/rootMSSM/FlexibleSUSY.m.in
+++ b/model_files/rootMSSM/FlexibleSUSY.m.in
@@ -37,20 +37,20 @@ HighScaleInput={
    {MassG,m12}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic},
-   FSFindRoot[{vd,vu}, {SM[MZ] - Pole[M[VZ]], SM[MH] - Pole[M[hh[1]]]}]
+   FSFindRoot[{vd,vu}, {LowEnergyConstant[MZ] - Pole[M[VZ]], LowEnergyConstant[MH] - Pole[M[hh[1]]]}]
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev]},
-   {vu, SM[vev] 20},
+   {vd, LowEnergyConstant[vev]},
+   {vu, LowEnergyConstant[vev] 20},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
