--- a/model_files/MRSSM/FlexibleSUSY.m.in
+++ b/model_files/MRSSM/FlexibleSUSY.m.in
@@ -18,9 +18,9 @@ SUSYScaleFirstGuess = 1000;
    automatically *)
 SUSYScaleInput = {};
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
     {Yu, Automatic},
@@ -31,8 +31,8 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
