--- a/model_files/MSSMD5O/FlexibleSUSY.m.in
+++ b/model_files/MSSMD5O/FlexibleSUSY.m.in
@@ -53,9 +53,9 @@ HighScaleInput={
    {Q[WOp], ZEROMATRIX[3,3]}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 UPMNS = Module[{
 	s12 = Sin @ ThetaV12, c12 = Cos @ ThetaV12,
@@ -78,8 +78,8 @@ LowScaleInput = Join[{
    Flatten[Table[{WOp[i,j], mv[[i,j]] / (vu/Sqrt[2])^2}, {i,3}, {j,3}], 1]];
 
 InitialGuessAtLowScale = Join[{
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}},
