--- a/model_files/UMSSM/FlexibleSUSY.m.in
+++ b/model_files/UMSSM/FlexibleSUSY.m.in
@@ -56,9 +56,9 @@ HighScaleInput = {
     {MassU, m12}
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
     {Yu, Automatic},
@@ -69,8 +69,8 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {vS, vSInput},
    {Yu, Automatic},
    {Yd, Automatic},
