--- a/model_files/cMSSM/FlexibleSUSY.m.in
+++ b/model_files/cMSSM/FlexibleSUSY.m.in
@@ -34,7 +34,7 @@ EWSBOutputParameters = { B[\[Mu]], \[Mu] };
 
 SUSYScale = Sqrt[Product[M[Su[i]]^(Abs[ZU[i,3]]^2 + Abs[ZU[i,6]]^2), {i,6}]];
 
-SUSYScaleFirstGuess = SM[MZ];
+SUSYScaleFirstGuess = LowEnergyConstant[MZ];
 
 SUSYScaleInput = {
     {Phase[\[Mu]], Exp[I ArcCos[CosPhi]]}
@@ -60,9 +60,9 @@ HighScaleInput = {
    {MassG, LHInput[MassG]  + I ImMassGIN }
 };
 
-LowScale = SM[MZ];
+LowScale = LowEnergyConstant[MZ];
 
-LowScaleFirstGuess = SM[MZ];
+LowScaleFirstGuess = LowEnergyConstant[MZ];
 
 LowScaleInput = {
    {Yu, Automatic},
@@ -73,8 +73,8 @@ LowScaleInput = {
 };
 
 InitialGuessAtLowScale = {
-   {vd, SM[vev] Cos[ArcTan[TanBeta]]},
-   {vu, SM[vev] Sin[ArcTan[TanBeta]]},
+   {vd, LowEnergyConstant[vev] Cos[ArcTan[TanBeta]]},
+   {vu, LowEnergyConstant[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
    {Ye, Automatic}
