--- a/model_files/lowNMSSM/TP2_1loop.in
+++ b/model_files/lowNMSSM/TP2_1loop.in
@@ -14,6 +14,7 @@ Block FlexibleSUSY
     9   0                    # Higgs 2-loop corrections O(alpha_b alpha_s)
    10   0                    # Higgs 2-loop corrections O(alpha_t^2 + alpha_t alpha_b + alpha_b^2)
    11   0                    # Higgs 2-loop corrections O(alpha_tau^2)
+   14   1                    # Higgs logarithmic resummation
 Block SMINPUTS
          1     1.28962000E+02   # alpha_em^(-1)
          2     1.16637000E-05   # G_F
