chop beta function values smaller than zero_threshold
Reason: Certain beta-functions can be numerically non-zero due to the
imprecision of numerical operations, even if the beta-function should
be algebraically zero.  Since such tiny non-zero beta-functions
sometimes fluctuate, which can confuse the Runge-Kutta integrator,
leading to non-perturbative running.  An example of such a behaviour
can be found in the CMSSMCPV for values of eta != 0.

In order to avoid such problems, a zero-threshold was introduced in
the previous commit.  Beta-functions smaller than this zero-threshold
are set to zero using the Chop() functor.

--- a/templates/two_scale_soft_parameters.cpp.in
+++ b/templates/two_scale_soft_parameters.cpp.in
@@ -20,6 +20,7 @@
 
 #include "@ModelName@_two_scale_soft_parameters.hpp"
 #include "wrappers.hpp"
+#include "functors.hpp"
 
 #include <iostream>
 
@@ -47,7 +48,7 @@ namespace flexiblesusy {
 
 Eigen::ArrayXd @ModelName@_soft_parameters::beta() const
 {
-   return calc_beta().get();
+   return calc_beta().get().unaryExpr(Chop<double>(get_zero_threshold()));
 }
 
 @ModelName@_soft_parameters @ModelName@_soft_parameters::calc_beta() const
