--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -48,6 +48,7 @@ public:
       , low_scale(0.)
       , parameter_output_scale(0.)
       , precision_goal(1.0e-4)
+      , beta_zero_threshold(1.0e-11)
       , max_iterations(0)
       , beta_loop_order(2)
       , threshold_corrections_loop_order(2)
@@ -69,6 +70,7 @@ public:
    void set_pole_mass_loop_order(unsigned l) { model.set_pole_mass_loop_order(l); }
    void set_ewsb_loop_order(unsigned l) { model.set_ewsb_loop_order(l); }
    void set_beta_loop_order(unsigned l) { beta_loop_order = l; }
+   void set_beta_zero_threshold(double t) { beta_zero_threshold = t; }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
    void set_force_output(bool flag) { force_output = flag; }
@@ -87,6 +89,7 @@ private:
    double susy_scale, low_scale;
    double parameter_output_scale; ///< output scale for running parameters
    double precision_goal; ///< precision goal
+   double beta_zero_threshold; ///< beta function zero threshold
    unsigned max_iterations; ///< maximum number of iterations
    unsigned beta_loop_order; ///< beta-function loop order
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
@@ -115,6 +118,7 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
    model.do_force_output(force_output);
    model.set_loops(beta_loop_order);
    model.set_thresholds(threshold_corrections_loop_order);
+   model.set_zero_threshold(beta_zero_threshold);
 
    susy_scale_constraint.clear();
    low_scale_constraint .clear();
