Bugfix: fill Physical SLHA struct from SLHA file
instead of Physical struct inside the model class

--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -34,6 +34,7 @@
 
 #define Pole(p) physical.p
 #define PHYSICAL(p) model.get_physical().p
+#define PHYSICAL_SLHA(p) model.get_physical_slha().p
 #define LOCALPHYSICAL(p) physical.p
 #define MODELPARAMETER(p) model.get_##p()
 #define DEFINE_PARAMETER(p)                                            \
@@ -133,7 +134,7 @@ void @ModelName@_slha_io::fill_drbar_parameters(@ModelName@_slha<T>& model) cons
 template <class T>
 void @ModelName@_slha_io::fill_physical(@ModelName@_slha<T>& model) const
 {
-@readLesHouchesPhyicalParameters@
+@readLesHouchesPhysicalParameters@
 }
 
 template <class T>
