--- a/templates/two_scale_susy_parameters.hpp.in
+++ b/templates/two_scale_susy_parameters.hpp.in
@@ -73,6 +73,8 @@ private:
 
 std::ostream& operator<<(std::ostream&, const @ModelName@_susy_parameters&);
 
+#undef TRACE_STRUCT_TYPE
+
 } // namespace flexiblesusy
 
 #endif
