--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -71,26 +71,26 @@ void @ModelName@_high_scale_constraint<Two_scale>::apply()
    assert(model && "Error: @ModelName@_high_scale_constraint::apply():"
           " model pointer must not be zero");
 
-   if (std::fabs(model->get_@hyperchargeCoupling@()) > 3.0) {
+   if (std::fabs(model->get_@hyperchargeCoupling@()) > @perturbativityThreshold@) {
 #ifdef ENABLE_VERBOSE
       ERROR("@ModelName@_high_scale_constraint: Non-perturbative gauge "
             "coupling @hyperchargeCoupling@ = " << model->get_@hyperchargeCoupling@());
 #endif
-      model->set_@hyperchargeCoupling@(1.0);
+      model->set_@hyperchargeCoupling@(@perturbativityThreshold@);
    }
-   if (std::fabs(model->get_@leftCoupling@()) > 3.0) {
+   if (std::fabs(model->get_@leftCoupling@()) > @perturbativityThreshold@) {
 #ifdef ENABLE_VERBOSE
       ERROR("@ModelName@_high_scale_constraint: Non-perturbative gauge "
             "coupling @leftCoupling@ = " << model->get_@leftCoupling@());
 #endif
-      model->set_@leftCoupling@(1.0);
+      model->set_@leftCoupling@(@perturbativityThreshold@);
    }
-   if (std::fabs(model->get_@strongCoupling@()) > 3.0) {
+   if (std::fabs(model->get_@strongCoupling@()) > @perturbativityThreshold@) {
 #ifdef ENABLE_VERBOSE
       ERROR("@ModelName@_high_scale_constraint: Non-perturbative gauge "
             "coupling @strongCoupling@ = " << model->get_@strongCoupling@());
 #endif
-      model->set_@strongCoupling@(1.0);
+      model->set_@strongCoupling@(@perturbativityThreshold@);
    }
 
    update_scale();
